# LibRecommender

./: .coveragerc  .gitignore  .readthedocs.yaml  Collaborative Filtering.ipynb  Factorization Meets the Neighborhood 2.ipynb  Factorization Meets the Neighborhood.ipynb  LICENSE  MANIFEST.in  README.md  TODOs  codecov.yml  docker  matrix_factorization.ipynb  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-serving.txt  requirements.txt  setup.cfg  setup.py  test.ipynb  test.py  test2.py  test_records
.github/workflows/: ci.yml  ci_serving.yml  ci_win_mac.yml  compatibility-tensorflow1.yml  compatibility-tensorflow2.yml  numpy-tensorflow-compatibility.yml  rust.yml  test-install.yml  testing.yml  wheels.yml
Dataset/: Dataset.py
algorithms/: BPR.py  Base.py  DeepFM.py  FM.py  NCF.py  SVD.py  item_KNN.py  superSVD.py  user_KNN.py  wide_deep.py
dataset/: Dataset.py  DatasetFeat.py  DatasetPure.py  Dataset_orig.py  preprocessing.py
distributed/: youtube_distributed.py
distributed/spark/: pom.xml
doc/: implementation_details.md  python_serving_guide.md  rust_serving_guide.md  user_guide.md
docker/: Dockerfile  README.md
docs/: requirements.txt
docs/md_doc/: implementation_details.md  rust_serving_guide.md  user_guide.md
docs/source/: conf.py  index.rst  installation.rst  tutorial.rst
evaluate/: evaluate.py
examples/: README.md  changing_feature_example.py  feat_example.py  feat_ranking_example.py  feat_rating_example.py  knn_embedding_example.py  model_retrain_example.py  multi_sparse_example.py  multi_sparse_processing_example.py  pure_example.py  pure_ranking_example.py  pure_rating_example.py  save_load_example.py  seq_example.py  split_data_example.py  test.ipynb  test.py  test2.py  torch_ranking_example.py  tutorial.ipynb  utils.py  wide_deep_estimator.py  wide_deep_tfrecord_estimator.py
libreco/: __init__.py
libreco/algorithms/: ALS.py  ALS_cy.c  ALS_cy.pyx  ALS_rating.pyx  ALS_rating_cy.pyx  Als.py  Als_cy.pyx  BPR.py  Base.py  DIN.py  DIN2.py  DeepFM.py  FM.py  NCF.py  SVD.py  SVDpp.py  YouTubeRec.py  __init__.py  _als.cpp  _als.pyx  _bpr.cpp  _bpr.pyx  als.py  autoint.py  base.py  bpr.py  caser.py  deepfm.py  deepwalk.py  din.py  fm.py  graphsage.py  graphsage_dgl.py  item2vec.py  item_KNN.py  item_cf.py  item_cf_rs.py  item_knn.py  knn_embed.py  lightgcn.py  (+25 more)
libreco/bases/: __init__.py  base.py  cf_base.py  cf_base_rs.py  dyn_embed_base.py  embed_base.py  gensim_base.py  meta.py  sage_base.py  seq_base.py  tf_base.py  tf_mixin.py
libreco/batch/: __init__.py  batch_data.py  batch_unit.py  collators.py  enums.py  sequence.py  tf_feed_dicts.py
libreco/data/: __init__.py  consumed.py  data_generator.py  data_info.py  dataset.py  preprocessing.py  processing.py  sequence.py  split.py  transformed.py
libreco/dataset/: DatasetFeat.py  DatasetPure.py  __init__.py  download_data.py  preprocessing.py
libreco/embedding/: __init__.py  item2vec.py  normalize.py
libreco/evaluate/: computation.py  evaluate.py  metrics.py
libreco/evaluation/: __init__.py  computation.py  evaluate.py  metrics.py
libreco/feature/: __init__.py  column.py  column_mapping.py  multi_sparse.py  sparse.py  ssl.py  unique.py  unique_features.py  update.py
libreco/graph/: __init__.py  from_dgl.py  inference.py  message.py  neighbor_walk.py
libreco/layers/: __init__.py  activation.py  attention.py  convolutional.py  dense.py  embedding.py  normalization.py  recurrent.py  transformer.py
libreco/prediction/: __init__.py  predict.py  preprocess.py
libreco/recommendation/: __init__.py  cold_start.py  preprocess.py  ranking.py  recommend.py
libreco/sampling/: __init__.py  batch_unit.py  data_sampler.py  negatives.py  random_walks.py
libreco/tfops/: __init__.py  configs.py  features.py  layers.py  loss.py  rebuild.py  (+2 more)
libserving/: .dockerignore  Dockerfile-py  Dockerfile-rs  README.md  benchmark.py  crate-index-config  docker-compose-py.yml  docker-compose-rs.yml  docker-compose-tf-serving.yml  request.py
libserving/actix_serving/: Cargo.toml  build.rs  rustfmt.toml
libserving/actix_serving/proto/: recommend.proto
libserving/actix_serving/proto/tensorflow/core/framework/: resource_handle.proto  tensor.proto  tensor_shape.proto  types.proto
libserving/actix_serving/proto/tensorflow_serving/apis/: model.proto  predict.proto  prediction_service.proto
libserving/actix_serving/src/: embed_deploy.rs  knn_deploy.rs  lib.rs  main.rs  online_deploy.rs  online_deploy_grpc.rs  tf_deploy.rs
libserving/actix_serving/src/utils/: common.rs  constants.rs  errors.rs  faiss.rs  features.rs  mod.rs  redis_ops.rs
libserving/actix_serving/tests/: embed.rs  knn.rs  tf.rs
libserving/actix_serving/tests/common/: mod.rs
rust/: Cargo.toml  README.md  pyproject.toml  rustfmt.toml
rust/recfarm/: __init__.py
rust/src/: graph.rs  incremental.rs  inference.rs  item_cf.rs  lib.rs  ordering.rs  serialization.rs  similarities.rs  sparse.rs  swing.rs  user_cf.rs  utils.rs
serving/: README.md  __init__.py  deploy.sh  deploy_FM.py  deploy_FM_request.py  deploy_feat_flask.py  deploy_feat_flask_restful.py  deploy_feat_request.py  deploy_flask.py  deploy_pure_flask.py  deploy_pure_request.py  deploy_request.py  export_model.py  nginx_conf  tf_serving.py  tf_shell.sh
tests/: compatibility_test.py  conftest.py  test_collators.py  test_consumed.py  test_data.py  test_dataset.py  test_deprecated.py  test_dgl.py  test_feature.py  test_initializers.py  test_knn_embed.py  test_misc.py  test_model_retrain_feat.py  test_model_retrain_pure.py  test_multi_sparse_processing.py  test_multiprocessing_seeds.py  test_negatives.py  test_rank_reco.py  test_sampling.py  test_similarities.py  test_split_data.py  test_tf_layers.py  test_tfmodel_retrain_feat.py  test_tfmodel_retrain_pure.py  test_torchmodel_retrain_pure.py  utils_data.py  utils_metrics.py  utils_multi_sparse_models.py  utils_path.py  utils_pred.py  utils_reco.py  utils_save_load.py
utils/: baseline_estimates.py  export_model.py  initializers.py  intersect.py  negative_sampling.py  sampling.py  similarities.py
(+269 files in other folders)
