[package]
name = "recfarm"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "recfarm"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
dashmap = "5.5.3"
flate2 = "1.0"
fxhash = "0.2.1"
pyo3 = { version = "0.23.3", features = ["abi3-py37"] }
rand = { version = "0.8", features = ["default", "alloc"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 4
