[package]
name = "actix_serving"
version = "0.2.2"
edition = "2021"
description = "Online model serving for LibRecommender"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
deadpool-redis = "0.11.1"
env_logger = "0.9.2"
faiss = "0.11.0"
futures = "0.3.25"
log = "0.4.15"
num_cpus = "1.0"
# openssl = { version = "0.10", features = ["vendored"] }
redis = { version = "0.22.1", features = ["connection-manager", "tokio-comp"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.23.1", features = ["full"] }
walkdir = "2.3.2"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
