[package]
name = "actix_serving"
version = "1.2.0"
edition = "2021"
description = "Online model serving for LibRecommender"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
clap = { version = "4.1.8", features = ["derive"] }
deadpool-redis = "0.11.1"
env_logger = "0.9.2"
faiss = "0.11.0"
fnv = "1.0.7"
futures = "0.3.25"
log = "0.4.15"
num_cpus = "1.0"
once_cell = "1.18"
prost = "0.11"
# openssl = { version = "0.10", features = ["vendored"] }
redis = { version = "0.22.1", features = ["connection-manager", "tokio-comp"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9"
walkdir = "2.3.2"

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
assert_cmd = "2.0.8"
pretty_assertions = "1.0"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
